--- a/silver_braintree/templates/forms/braintree/braintree_ui.html
+++ b/silver_braintree/templates/forms/braintree/braintree_ui.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 
-<form id="nonce-form" action="{{ payment_complete_url }}" method="POST" style="display:none;">
-    <input id="nonce-field" name="payment_method_nonce" type="text" hidden="hidden">
+<form id="nonce-form" action="{{ payment_complete_url }}" method="POST">
+    <input id="nonce-field" name="payment_method_nonce" type="hidden">
 </form>
 
 <script>
