Require Python==3.7, Django>3.1,<3.3, django-silver>=0.11 and braintree==3.59.0

--- a/silver_braintree/templates/forms/braintree/braintree_ui.html
+++ b/silver_braintree/templates/forms/braintree/braintree_ui.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 
 <form id="nonce-form" action="{{ payment_complete_url }}" method="POST">
     <input id="nonce-field" name="payment_method_nonce" type="hidden">
